# binary_size_explorer

./: Cargo.toml  README.md  simple_long.wasm  simple_long.wat  simple_wasm_test_with_dwarf.wasm  simple_wasm_with_dwarf.asm  wasm_test_with_debug.wasm  wasm_tests.wasm
.zed/: debug.json
src/: app.rs  code_viewer.rs  data_provider.rs  data_provider_twiggy.rs  disassembler.rs  functions_explorer.rs  functions_exporer.rs  lib.rs  main.rs  memory_viewer.rs  path.rs
src/arena/: array.rs  mod.rs  scratch.rs  string.rs  tree.rs  vec.rs
src/dwarf/: mod.rs
src/gui/: tree_view.rs
src/wasm/: parser.rs
