[package]
name = "binary_size_explorer"
version = "0.1.0"
authors = ["Alexandru Ene <alex.ene0x11@gmail.com>"]
edition = "2024"

[dependencies]
egui = "0.31"
egui-file-dialog = "0.10.0"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
twiggy-parser = "0.7"
twiggy-analyze = "0.7"
twiggy-opt = { version = "0.7" }
egui_extras = { version = "0.31" }
json = { version = "0.12" }
egui_dock = { version = "0.16", features = ["serde"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
