[package]
name = "binary_size_explorer"
version = "0.1.0"
authors = ["Alexandru Ene <alex.ene0x11@gmail.com>"]
edition = "2024"

[dependencies]
egui = "0.31"
egui_dock = { version = "0.16", features = ["serde"] }
egui-file-dialog = "0.10.0"
egui_extras = { version = "0.31" }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
twiggy-analyze = { path = "../twiggy/analyze", version = "0.7" }
twiggy-opt = { path = "../twiggy/opt", version = "0.7" }
twiggy-parser = { path = "../twiggy/parser", version = "0.7" }
twiggy-ir = { path = "../twiggy/ir", version = "0.7" }
anyhow = "1.0.98"
# twiggy-ir = "0.7.0"
wasmparser = "0.230.0"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
