[package]
name = "binary_size_explorer"
version = "0.1.0"
authors = ["Alexandru Ene <alex.ene0x11@gmail.com>"]
edition = "2024"

[dependencies]
egui = "0.31"
egui_dock = { version = "0.16", features = ["serde"] }
egui-file-dialog = "0.10.0"
egui_extras = { version = "0.31" }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
emath = "0.31"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
twiggy-analyze = { git = "https://github.com/AlexEne/twiggy.git", branch = "wip-dissassembly", version = "0.7" }
twiggy-opt = { git = "https://github.com/AlexEne/twiggy.git", branch = "wip-dissassembly", version = "0.7" }
twiggy-parser = { git = "https://github.com/AlexEne/twiggy.git", branch = "wip-dissassembly", version = "0.7" }
twiggy-ir = { git = "https://github.com/AlexEne/twiggy.git", branch = "wip-dissassembly", version = "0.7" }
anyhow = "1.0.98"
# twiggy-ir = "0.7.0"
wasmparser = "0.230.0"
wasm-tools = { version = "1.230.0", features = [
    "addr2line",
], default-features = false }
addr2line = "0.24.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.172"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
